--- a/kadai_005/HTML/kadai_005.html
+++ b/kadai_005/HTML/kadai_005.html
@@ -8,7 +8,7 @@
    <body> 
        <h1>私の趣味</h1> 
        <p>私は中学時代にサッカーを始めました。<br> 現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。</p>
-     <img src="../images/sample.jpg">
+     <img src="../images/sample.jpg"alt=sample.jpg“>
      
     <br><a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a> 
    </body>
